2005-01-29  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (log options): Note quirky interaction of log options.
	(Suggestion from Dan Peterson <dbpete@aol.com>.)

2004-10-29  Mark D. Baushke  <mdb@cvshome.org>

	* cvs.texinfo (Common options): The -r TAG option works with
	the cvs annotate command.
	(Original patch from Ville Skytta <scop@cvshome.org>.)

2004-09-25  Derek Price  <derek@ximbiot.com>

	* mkman.in: Move to...
	* mkman.pl: ...here.
	* Makefile.am (cvs.1): mkman is in build dir, not src dir.

2004-07-17  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (Update imports, import): Add notes on requirement that
	release tags be unique.
	(Original patch from Ilya N. Golubev <gin@mo.msk.ru>.)

2004-06-10  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (commit files): Remove reference to the obsolete -i
	module option.

2004-05-28  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (Global options): Remove reference to global -l option.
	(Report from Kevin Bulgrien <Kevin.Bulgrien@TriPointGlobal.com>.)

2004-05-14  Mark D. Baushke  <mdb@cvshome.org>
	
	* cvs.texinfo: Fix makeinfo error.

	* cvs.texinfo (Adding files): Minor cleanup.
	(Using keywords): Minor cleanup.
	(annotate): Move into the manual section, split into three nodes.
	(annotate options): New node.
	(annotate example): New node.
	(based on patch from Steve McIntyre <steve@einval.com>.)
	(Locks, GSSAPI authenticated): Minor cleanup.
	(Sticky tags): Clarify operation.
	(Locks): Spelling fix.
	(Merging adds and removals): Ditto.
	(Invoking CVS): Ditto
	(Builds): Grammar fix.
	(Line group formats): Ditto
	(Line group formats, Line formats): Ditto
	(commit files): Ditto.
	* cvs.1, stamp-vti, version.texi: Regenerated
	
2004-05-12  Derek Price  <derek@ximbiot.com>

	* mkman.in: Clarify status messages.

2004-05-10  Derek Price  <derek@ximbiot.com>

	* mkman.in: Organize & tidy comments.  Check for unprocessed texinfo
	commands.  Output better error messages on finding unprocessed texinfo
	commands.