@@ -1,4 +1,4 @@
-@set UPDATED 29 January 2005
+@set UPDATED 31 January 2005
 @set UPDATED-MONTH January 2005
 @set EDITION 1.11.18.1
 @set VERSION 1.11.18.1
