@@ -1,3 +1,7 @@
+2005-01-31  Derek Price  <derek@ximbiot.com>
+
+	* Makefile.am, cvs.man.header, cvs.texinfo: Update copyright notices.
+
 2005-01-29  Derek Price  <derek@ximbiot.com>
 
 	* cvs.texinfo (log options): Note quirky interaction of log options.
